<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name">Hudhud FM</string>
    <string name="app_slogan">The ideal destination for fans of radio and audio programs in Yemen</string>
    <string name="label_app_description">With “Hudhud FM”, the limits of space and time are no longer an obstacle between you and the pulse of life in Yemen. With the push of a button, your phone becomes a window to a wide ocean of Yemeni radio channels, taking you on a journey through rich cultures, ancient history, and inexhaustible creativity.</string>
    <string name="app_version">Version</string>
    <string name="version_unknown">Unknown</string>
    <string name="app_gmail" translatable="false">hudhudfm.ye@gmail.com</string>
    <string name="app_mobile" translatable="false">+967 775617017</string>
    <string name="app_twitter" translatable="false">https://twitter.com/HudhudFm</string>
    <string name="app_facebook" translatable="false">https://www.facebook.com/HudhudFm</string>
    <string name="app_instagram" translatable="false">https://instagram.com/hudhudfm</string>
    <string name="developer_reference" translatable="false">https://sanaa-dev.web.app</string>
    <string name="terms_reference" translatable="false">https://doc-hosting.flycricket.io/hudhud-fm-terms-policy/792dff13-4452-4693-978c-bfcfc1d7c8b0/privacy</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8921334057686979/6618636515</string>
    <string name="label_remote_config_key" translatable="false">hudhudFmAppConfig</string>
    <string name="facebook_app_id" translatable="false">811088116023852</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb811088116023852</string>
    <string name="facebook_client_token" translatable="false">afe4eb099e9ad5f32fd9b17ce8ca50ea</string>
    <string name="default_notification_channel_id" translatable="false">app_notification_channel</string>
    <string name="default_notification_channel_name" translatable="false">App Updates</string>
    <string name="default_notification_channel_description" translatable="false">Receive notifications about app updates and new features.</string>
    <string name="label_like">Like</string>
    <string name="label_more">More</string>
    <string name="label_share">Share</string>
    <string name="share_with">Share via</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_ar">العربية (Arabic)</string>
    <string name="pref_language_en">English</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_theme_system">System default</string>
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        
        <item quantity="other">%d likes</item>
        
    </plurals>
    <string name="url_profile">https://picsum.photos/200</string>
    <string name="no_stream">Sorry, %s radio broadcasts are currently unavailable</string>
    <string name="select_email_app">Share</string>
    <string name="btn_continue">Next</string>
    <string name="audio_notification">Play in background</string>
    <string name="dialog_connection_title">Servers unreachable</string>
    <string name="dialog_connection_description">We can not connect with our APIs.\n\nPlease ensure that you have set up your API keys and parameters as documented!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue to see your favorite/offline items!</string>
    <string name="volume_low">You must raise the volume!</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Yes</string>
    <string name="nav_home">Main</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_episode_daily">Today\'s</string>
    <string name="episode_daily">%s Radio broadcasts for today</string>
    <string name="please_wait">Please wait ..</string>
    <string name="field_is_required">Please add %s </string>
    <string name="delete_messages">Do you want to delete %1$s?</string>
    <string name="user_account">User Profile</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consecrated animistic elite.</string>
    <string name="label_note">Note !</string>
    <string name="most_login">You must be logged in!</string>
    <string name="add_comment">Add comment ..</string>
    <string name="click_to_change_image">Choose a picture</string>
    <string name="label_send">Send</string>
    <string name="error_empty_field_not_allowed">The field must not be empty</string>
    <string name="following">Follow</string>
    <string name="post">Daily Episode</string>
    <string name="subscribers">Subscribe</string>
    <string name="likes">Like</string>
    <string name="check_internet_connection">Please make sure the internet is available!</string>
    <string name="label_radio_map">Programs</string>
    <string name="press_once_again_to_exit">Click again to log out</string>
    <string name="user_name">User name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone_number">Mobile nomber</string>
    <string name="image_desc" translatable="false">fm_%s.png</string>
    <string name="logout">Logout</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="no_data_available">No available data</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="notification_playing">Live broadcast</string>
    <string name="pick_profile_image">Change user picture</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="confirm_delete_my_account">You\'re about to delete your account permanently <br />  Are you sure ?</string>
    <string name="confirm_logout_my_account">You\'re about to logout from the app <br />  Confirm ?</string>
    <string name="lbl_take_camera_picture">Take picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Authorization</string>
    <string name="dialog_permission_message">This app needs to be granted permission to use this feature. You can give them in the application settings.</string>
    <string name="go_to_settings">Go to setting</string>
    <string name="add_station">Add radio station</string>
    <string name="add_program">Add program</string>
    <string name="label_no_internet">No internet</string>
    <string name="more">More</string>
    <string name="share_app">Share the App</string>
    <string name="rate_app">Rate the App</string>
    <string name="error_not_registered_yet">Not Registered</string>
    <string name="label_hide">Hide</string>
    <string name="label_online">Online</string>
    <string name="offline">Not Online</string>
    <string name="brows_more_station">You can browse more radio channels\n through the main window</string>
    <string name="add_episode">Add Episode</string>
    <string name="goto_login">In order to use the application services you must log in \n \nDo you want to go to the login window?</string>
    <string name="main_program_for">Main programs</string>
    <string name="update_episode">Update episode</string>
    <string name="powered_by">Powered By &#x2665; Sana\'a Dev</string>
    <string name="msg_no_data_for">Sorry, program data for \'%s\' radio is currently unavailable</string>
    <string name="whatsapp_not_installed">You do not have WhatsApp installed</string>
    <string name="label_save">Save</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code_carrier_rates_may_apply">Please enter your mobile phone number to receive the verification code.</string>
    <string name="label_program_name">Program Name</string>
    <string name="label_tag">\@program_fm</string>
    <string name="label_category">Category</string>
    <string name="label_desc">Description</string>
    <string name="ex_no">123</string>
    <string name="label_announcer_name">Announcer Name</string>
    <string name="label_grid">Grid</string>
    <string name="label_list">List</string>
    <string name="tab_episodes">Episodes</string>
    <string name="tab_about_station">About &amp; Schedule</string>
    <string name="btn_listen_live">Listen Live</string>
    <string name="label_station_info">Station Info</string>
    <string name="label_schedule_table">Broadcast Schedule</string>
    <string name="label_live_badge">Live</string>
    <string name="label_comments">Comments</string>
    <string name="label_title">Title</string>
    <string name="label_label">Label</string>
    <string name="ex_date">22/Sep/2022</string>
    <string name="label_radio_intro1">You can select the radio channel you want to follow by choosing the radio card</string>
    <string name="label_play_intro2">Through this button you can play the live broadcast of the radio channel you selected</string>
    <string name="label_replay">Replay</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="error_please_select_radio_station">Please select the radio channel</string>
    <string name="label_program_category">Program Category</string>
    <string name="label_show_date">Date Show</string>
    <string name="label_show_days">Day\'s Show</string>
    <string name="label_enter_received_smtp">A verification code has been sent to your mobile phone\nPlease enter the verification code below</string>
    <string name="mobile_cant_edited">The mobile number cannot be modified</string>
    <string name="login_successfully">You are logged in successfully</string>
    <string name="user_loged_out">Signed out</string>
    <string name="unkon_error_please_try_again_later">An error occurred, please try again later</string>
    <string name="ex_comment">Hi there</string>
    <string name="ex_time">12:01 AM</string>
    <string name="ex_comment_count">Comments 12</string>
    <string name="label_display_now">Display Now</string>
    <string name="ex_likes">20 Likes</string>
    <string name="label_radio_station">Radio Channel</string>
    <string name="label_start_now">Start Now</string>
    <string name="label_whatsapp">WhatsApp</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_contact_us">Contact us via</string>
    <string name="label_main_screen">Main screen</string>
    <string name="label_warning">Warning</string>
    <string name="label_close">Close</string>
    <string name="retry">إعادة المحاولة</string>
    <string name="something_went_wrong">حدث خطأ غير متوقع</string>
    <string name="label_search_hint">Search...</string>
    <string name="hint_search_radios">Search radio name, frequency, city...</string>
    <string name="filter_all">All</string>
    <string name="filter_sanaa">Sana\'a</string>
    <string name="filter_aden">Aden</string>
    <string name="filter_news">News</string>
    <string name="filter_culture">Culture</string>
    <string name="label_available_stations">Radio Stations</string>
    <string name="no_matching_stations">No matching radio stations found</string>
    <string name="label_change_view">Change View</string>
</resources>