<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/state_error_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl">

    <ImageView
        android:id="@+id/state_error_icon"
        android:layout_width="@dimen/state_icon_size"
        android:layout_height="@dimen/state_icon_size"
        android:contentDescription="@null"
        android:src="@drawable/ic_warning"
        app:tint="@color/md_theme_error" />

    <TextView
        android:id="@+id/state_error_title"
        style="@style/TextAppearance.FMPro.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:gravity="center"
        android:text="@string/label_warning" />

    <TextView
        android:id="@+id/state_error_description"
        style="@style/TextAppearance.FMPro.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="center"
        android:text="@string/something_went_wrong" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/state_error_retry_button"
        style="@style/Widget.FMPro.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/retry" />

</LinearLayout>
